--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -11,5 +11,8 @@ RUN npm install
 # アプリのソースコードをコピー
 COPY . .
 
-# 開発サーバーを起動（ホットリロード対応）
-CMD ["npm", "run", "dev"]
+# 本番ビルドを実行
+RUN npm run build
+
+# 環境変数 PORT（Cloud Run では 8080）を考慮してサーバーを起動
+CMD ["npm", "run", "preview", "--", "--port", "8080", "--host"]
