--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "chart.js": "^4.4.7",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^6.29.0"
   },
